force-app/main/default/objects/FiduciaryOthers__c/FiduciaryOthers__c.object-meta.xml
<CustomObject>
    <label>Fiduciary Others</label>
    <nameField>
        <displayFormat>FO-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fiduciary Others</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>