force-app/main/default/objects/FiduciaryOthers__c/fields/Depositor__c.field-meta.xml
<CustomField>
    <fullName>Depositor__c</fullName>
    <label>Depositor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>