force-app/main/default/objects/FiduciaryOthers__c/fields/NotReconciledAMT__c.field-meta.xml
<CustomField>
    <fullName>NotReconciledAMT__c</fullName>
    <label>Not-Reconciled AMT</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>