force-app/main/default/objects/FiduciaryOthers__c/fields/ReconciledAMT__c.field-meta.xml
<CustomField>
    <fullName>ReconciledAMT__c</fullName>
    <label>Reconciled AMT</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>