force-app/main/default/objects/FiduciaryOthers__c/fields/RefSettlementLineItem__c.field-meta.xml
<CustomField>
    <fullName>RefSettlementLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. Settlement Line Item</label>
    <referenceTo>SettlementLineItem__c</referenceTo>
    <relationshipLabel>Fiduciary Others</relationshipLabel>
    <relationshipName>FiduciaryOthersAsRef</relationshipName>
    <type>Lookup</type>
</CustomField>