force-app/main/default/objects/FiduciaryOthers__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountName__c</columns>
    <columns>Depositor__c</columns>
    <columns>TransactionDate__c</columns>
    <columns>SettlementCurrency__c</columns>
    <columns>OriginAmount__c</columns>
    <columns>ReconciledAMT__c</columns>
    <columns>NotReconciledAMT__c</columns>
    <columns>Status__c</columns>
    <columns>BizRegion__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>