force-app/main/default/objects/FiduciaryOthers__c/listViews/Not_Reconciled_AMT.listView-meta.xml
<ListView>
    <fullName>Not_Reconciled_AMT</fullName>
    <columns>NAME</columns>
    <columns>AccountName__c</columns>
    <columns>TransactionDate__c</columns>
    <columns>SettlementCurrency__c</columns>
    <columns>OriginAmount__c</columns>
    <columns>ReconciledAMT__c</columns>
    <columns>NotReconciledAMT__c</columns>
    <columns>RefBankTransaction__c</columns>
    <columns>Status__c</columns>
    <columns>BizRegion__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NotReconciledAMT__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>Not-Reconciled</label>
</ListView>